--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" data-modal-close class="btn-close">
-                <svg class="close-icon" width="18" height="18">
+                <svg class="close-icon-icon" width="18" height="18">
                     <use href="./images/sprite.svg#icon-close"></use>
                 </svg>
             </button>
