--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
     </footer>
 
 
-    <!-------------------- модельне вікно ---------------------->
+    <!-- модельне вікно -->
 
 
     <div class="backdrop is-hidden" data-modal>
