--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                 <div class="human-data">
                     <label for="user-name" class="form-label">Ваше имя</label>
                     <div class="input-wrapper">
-                        <input type="text" name="user-name" id="user-name" class="form-input" />
+                        <input type="text" name="user-name" id="user-naame" class="form-input" />
                         <svg class="form-icon" width="18" height="18">
                             <use href="./images/sprite.svg#icon-emailname"></use>
                         </svg>
@@ -458,10 +458,10 @@
 
                 <div class="human-data">
                     <label for="user-text" class="form-label">Коммент</label>
-                    <textarea name="user-text" id="user-text" class="text-coment" placeholder="Введите текст"></textarea>
+                    <textarea name="user-text" id="user-text" class="text-cooment" placeholder="Введите текст"></textarea>
                 </div>
 
-                <input type="checkbox" class="form-checkbox visually-hidden" name="policy" id="policy" />
+                <input type="checkbox" class="form-checkbox visually-hidden" name="policy" id="poliicy" />
                 <label for="policy" class="check-text">
                     <span class="check-item">
                         <svg class="check-icon" width="16" height="15">
