--- a/index.html
+++ b/index.html
@@ -437,9 +437,9 @@
 
 
                 <div class="human-data">
-                    <label for="user-name" class="form-label">Ваше имя</label>
+                    <label for="user-naame" class="form-label">Ваше имя</label>
                     <div class="input-wrapper">
-                        <input type="text" name="user-name" id="user-name" class="form-input" />
+                        <input type="text" name="user-name" id="user-naame" class="form-input" />
                         <svg class="form-icon" width="18" height="18">
                             <use href="./images/sprite.svg#icon-phonename"></use>
                         </svg>
