--- a/index.html
+++ b/index.html
@@ -462,15 +462,14 @@
                         placeholder="Введите текст"></textarea>
                 </div>
 
-                <input type="checkbox" class="form-checkbox visually-hidden" name="policy" id="poliicy" />
-                <label for="policy" class="check-text">
-                    <span class="check-item">
-                        <svg class="check-icon" width="16" height="15">
-                            <use href="./images/sprite.svg#icon-Vectori"></use>
-                        </svg>
-                    </span>
-                    Соглашаюсь с рассылкой и принимаю <a href="" class="link-check"> Условия договора</a></label>
-
+<input type="checkbox" class="form-checkbox visually-hidden" name="policy" id="policy" />
+<label for="policy" class="check-text">
+    <span class="check-item">
+        <svg class="check-icon" width="16" height="15">
+            <use href="./images/sprite.svg#icon-Vectori"></use>
+        </svg>
+    </span>
+    Соглашаюсь с рассылкой и принимаю <a href="" class="link-check"> Условия договора</a></label>
                 <button type="submit" class="form-btn">
                     Отправить
                 </button>
